# openmp-mergesort

./: .gitignore  CMakeLists.txt  README.md
include/merge_sort/: merge_sort.hpp
include/quick_sort/: quick_sort_parallel.hpp  quick_sort_serial.hpp  quicksort_single.hpp
src/: sort_parallel.cpp  sort_parallel_rank.cpp  sort_serial.cpp
tests/: test_merge_sort.cpp
